# load-in-abyss

./: .clang-format  .gitignore  .gitmodules  ATTRIBUTIONS.md  CMakeLists.txt  README.md  main.cpp
.github/: pull_request_template.md
libs/.github/: pull_request_template.md
res/shaders/cubes/: fs_cubes.sc
res/shaders/phong_light/: fs_phong_light.sc  varying.def.sc  vs_phong_light.sc
res/shaders/simple/: vs_simple.sc
shaders/cubes/: vs_cubes.sc
src/: box.cpp  box.hpp  easy_matrix.cpp  easy_matrix.hpp  imported_mesh.cpp  imported_mesh.hpp  main.cpp  material.hpp  mesh.hpp  model.hpp  renderer.cpp  renderer.hpp
